completed calculator project

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+    <h1><b>CALCULATOR</b></h1>
    <div class="cal">
-       <input type="text" >
+       <input type="text" name="val" id="val" >
        <table>
            <tr>
                <td><button class="ac"><b>AC</b></button></td>
@@ -42,4 +44,5 @@
        </table>
    </div> 
 </body>
+<script src="first.js"></script>
 </html>
