--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1><b>CALCULATOR</b></h1>
-   <div class="cal">
+   <div class="calc">
        <input type="text" name="val" id="val" >
        <table>
            <tr>
